--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "next": "14.2.10",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.475.0",
+    "next": "^14.2.24",
     "react": "^18",
     "react-dom": "^18"
   },
